--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -45,6 +45,7 @@ http {
             try_files $uri =404;
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
             fastcgi_pass ysoffner-server-php5:9000;
+            #fastcgi_pass ysoffner-server-php7:9000; #Choose your version
             fastcgi_index index.php;
             include fastcgi_params;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
