--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,57 @@
 version: '3'
+
 services:
   ysoffner-server-nginx:
     container_name: ysoffner-server-nginx
     image: nginx:latest
+    networks:
+      - webgrind
     ports:
       - 1000:80
     volumes:
+    # Path
+    # - /file/path/to_analyse
+    
+    # Configs
       - ./configs/nginx.conf:/etc/nginx/nginx.conf
-      - ../webgrind/:/var/www/webgrind/
-    networks:
-      - ysoffner-server-net
+    
+    # Repository of WebGrind
+      - ./webgrind/:/var/www/webgrind/
 
-  ysoffner-server-php:
+
+  ysoffner-server-php7:
+    container_name: ysoffner-server-php7
     image: ysoffner/php:7.1.18-fpm-alpine
-    container_name: ysoffner-server-php
+    networks:
+      - webgrind
     ports:
       - 9001:9000
     volumes:
-      - ../configs/php.ini:/usr/local/etc/php/php.ini
-      - ../webgrind/:/var/www/webgrind/
-    networks:
-      - ysoffner-server-net
+    # - /file/path/to_analyse
+    
+    # Configs
+      - ./configs/php.ini:/usr/local/etc/php/php.ini
+    
+    # Repository of WebGrind
+      - ./webgrind/:/var/www/webgrind/
+
   
   ysoffner-server-php5:
-    image: ysoffner/php:5.6.30-fpm
     container_name: ysoffner-server-php5
+    image: ysoffner/php:5.6.30-fpm
+    networks:
+      - webgrind
     ports:
       - 9002:9000
     volumes:
-      - ../configs/php.ini:/usr/local/etc/php/php.ini
-      - ../webgrind/:/var/www/webgrind/
-    networks:
-      - ysoffner-server-net
+    # - /file/path/to_analyse
+    
+    # Configs
+      - ./configs/php.ini:/usr/local/etc/php/php.ini
+    
+    # Repository of WebGrind
+      - ./webgrind/:/var/www/webgrind/
 
 networks:
-  ysoffner-server-net:
+  webgrind:
     driver: bridge
