--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -44,13 +44,36 @@ http {
         location ~ \.php$ {
             try_files $uri =404;
             fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            fastcgi_pass ysoffner-server-php5:9000;
-            #fastcgi_pass ysoffner-server-php7:9000; #Choose your version
+            #fastcgi_pass ysoffner-server-php5:9000;
+            fastcgi_pass ysoffner-server-php7:9000;
             fastcgi_index index.php;
             include fastcgi_params;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             fastcgi_param PATH_INFO $fastcgi_path_info;
         }
+        #server {
+        #    listen 81;
+        #    index index.php index.html;
+        #    server_name _;
+        #    error_log  /var/log/nginx/error.log;
+        #    access_log /var/log/nginx/access.log;
+        #    root /some/path/file;
+
+        #    location / {
+        #        try_files $uri $uri/ /index.php?$query_string;
+        #    }
+
+        #    location ~ \.php$ {
+        #        try_files $uri =404;
+        #        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        #        fastcgi_pass ysoffner-server-php5:9000;
+        #        fastcgi_pass ysoffner-server-php7:9000;
+        #        fastcgi_index index.php;
+        #        include fastcgi_params;
+        #        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        #        fastcgi_param PATH_INFO $fastcgi_path_info;
+        #    }
+        #}
     }
 
 }
