--- a/configs/docker-php-ext-xdebug.ini
+++ b/configs/docker-php-ext-xdebug.ini
@@ -1,5 +1,6 @@
 ;rewrite of dockerfile option
-xdebug.profiler_enable = 1
+zend_extension=/usr/local/lib/php/extensions/no-debug-non-zts-20170718/xdebug.so
+xdebug.profiler_enable = 0
 xdebug.profiler_output_name = xdebug.out.%t
 xdebug.profiler_output_dir = /tmp
 xdebug.profiler_enable_trigger = 1
