--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,15 @@ services:
     container_name: ysoffner-server-nginx
     image: nginx:latest
     depends_on:
-      - ysoffner-server-php7
       - ysoffner-server-php5
+      - ysoffner-server-php7.1
+      - ysoffner-server-php7.2
     networks:
       - webgrind
     ports:
       - 1000:80
-      #- 1001:81
     volumes:
     # Path
-      # - /file/path/to_analyse:/some/path/file
     
     # Configs
       - ./configs/nginx.conf:/etc/nginx/nginx.conf
@@ -22,18 +21,19 @@ services:
     # Repository of WebGrind
       - ./webgrind/:/var/www/webgrind/
 
-
-  ysoffner-server-php7:
-    container_name: ysoffner-server-php7
-    image: ysoffner/php:7.1.18-fpm-alpine
+  ysoffner-server-php5:
+    container_name: ysoffner-server-php5
+    image: ysoffner/php:5.6.30-fpm
     networks:
       - webgrind
     ports:
       - 9001:9000
     volumes:
+    # Logs
+      - ./logs_errors/php5:/error/
+
     # Path
-      # - /file/path/to_analyse:/some/path/file
-    
+
     # Configs
       - ./configs/php.ini:/usr/local/etc/php/php.ini
       - ./configs/docker-php-ext-xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
@@ -41,21 +41,44 @@ services:
     # Repository of WebGrind
       - ./webgrind/:/var/www/webgrind/
 
-  
-  ysoffner-server-php5:
-    container_name: ysoffner-server-php5
-    image: ysoffner/php:5.6.30-fpm
+
+  ysoffner-server-php7.1:
+    container_name: ysoffner-server-php7.1
+    image: ysoffner/php:7.1.18-fpm-alpine
     networks:
       - webgrind
     ports:
       - 9002:9000
     volumes:
-    # Path
-      # - /file/path/to_analyse:/some/path/file
+    # Logs
+      - ./logs_errors/php7.1:/error/
 
+    # Path
+      - ./configs/docker-php-ext-xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+    
     # Configs
       - ./configs/php.ini:/usr/local/etc/php/php.ini
+    
+    # Repository of WebGrind
+      - ./webgrind/:/var/www/webgrind/
+
+  
+  ysoffner-server-php7.2:
+    container_name: ysoffner-server-php7.2
+    image: ysoffner/php:7.2.6-fpm-alpine
+    networks:
+      - webgrind
+    ports:
+      - 9003:9000
+    volumes:
+    # Logs
+      - ./logs_errors/php7.2:/error/
+
+    # Path
       - ./configs/docker-php-ext-xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+    
+    # Configs
+      - ./configs/php.ini:/usr/local/etc/php/php.ini
     
     # Repository of WebGrind
       - ./webgrind/:/var/www/webgrind/
@@ -63,3 +86,6 @@ services:
 networks:
   webgrind:
     driver: bridge
+
+volumes:
+  logs_errors:
