--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,10 @@ script:
   - PACKAGE=/var/www docker-compose up -d
   - docker-compose ps
   - echo "Travis:" $TRAVIS_TEST_RESULT
+  - docker exec -ti ysoffner-server-php7.2 php -i | grep Xdebug
+  - if [[ $(docker exec -ti ysoffner-server-php7.2 php -i |grep xdebug.remote_enable |awk '{print $3}') == 'On ']];then
+  echo 'Default is Off' && exit 0;
+  fi
 
 
 notifications:
