add status of port 1000

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ script:
   - if [[ $(docker exec -ti ysoffner-server-php7.2 php -i |grep xdebug.remote_enable |awk '{print $3}') == 'On' ]]; then
       echo 'Default is Off' && exit 0;
     fi
-
+  - curl -IL http://localhost:1000
 
 notifications:
   email:
